# tokyo-transportation-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  config.py  pyproject.toml  requirements.txt  server.py
.agents/skills/tokyo-transit/: SKILL.md
.agents/skills/tokyo-transit/references/: operator_rules.md
.github/: release_template.md
data/: stations.py
docs/: README.md  data_source_limitations.md
docs/codex_testing/: test_cases.md
docs/debug/: debug_log.md
services/: transit_fetcher.py
tests/: test_route_service.py
tokyo_mcp/: README.md
tokyo_mcp/data/: stations.py
tokyo_mcp/services/: data_service_selector.py  planning_service.py  route_service.py  transit_fetcher.py  transit_parser.py
tokyo_mcp/services/experimental/: README.md  temp_parser.py
tokyo_mcp/tools/: arrival_planner_tool.py  get_route.py  route_tool.py
tokyo_mcp/utils/: query_parser.py
